rebranding of legacy we moved pages tfs: 23592, 23600.
Updates:

[Edward] Moved all leave behind files to a common folder. Rename references for http://software.dell.com to https://software.dell.com
[Naveen] Removed external links to css/js
[Naveen] Beautified the code
[Edward] Made minor updates.

Change-Id: I8487d664e9a8a8555f2097f18b1c337a1219213a

--- a/pages/akamai/failover.html
+++ b/pages/akamai/failover.html
@@ -67,38 +67,41 @@
 					</thead>
 					<tbody>
 					<tr>
-						<td scope="row"><a href="http://www.appassure.com/contact/">AppAssure</a></td>
-						<td>866-459-6653</td>
-						<td><a href="mailto:sales@appassure.com">sales@appassure.com</a></td>
-						<td><a href="http://www.appassure.com/support/register/">http://www.appassure.com/support/register/</a></td>
-					</tr>
-					<tr>
-						<td scope="row"><a href="http://www.boomi.com/company/contact">Boomi</a></td>
-						<td>800-732-3602</td>
-						<td><a href="mailto:sales@boomi.com">sales@boomi.com</a></td>
-						<td><a href="http://www.boomi.com/services">http://www.boomi.com/services</a></td>
-					</tr>
-					<tr>
-						<td><a href="https://software.dell.com/company/contact-us.aspx">KACE</a>
-						</th>
-						<td>877-MGMT-DONE</td>
-						<td><a href="mailto:sales@kace.com">sales@kace.com</a></td>
-						<td><a href="https://software.dell.com/kace/">https://www.kace.com/support/Customer</a></td>
-					</tr>
-					<tr>
-						<td><a href="http://www.quest.com/company/contact-us.aspx">Quest Software</a>
-						</th>
+						<td scope="row">Sales</td>
 						<td>800-306-9329</td>
-						<td><a href="mailto:info@quest.com">info@quest.com</a></td>
+						<td><a href="mailto:sales@software.dell.com">sales@software.dell.com</a></td>
 						<td><a href="https://support.quest.com/productinformation.aspx">https://support.quest.com/productinformation.aspx</a>
 						</td>
 					</tr>
 					<tr>
-						<td><a href="http://www.sonicwall.com">SonicWALL</a>
+						<td scope="row">Support</td>
+						<td>800-306-9329</td>
+						<td></td>
+						<td><a href="https://support.quest.dell.com/">https://support.quest.dell.com/</a></td>
+					</tr>
+					<tr>
+						<td>Licensing
 						</th>
-						<td>888-557-6642</td>
-						<td><a href="mailto:sales@sonicwall.com">sales@sonicwall.com</a></td>
-						<td><a href="http://www.sonicwall.com/us/en/support.html">http://www.sonicwall.com/us/en/support.html</a>
+						<td>800-306-9329</td>
+						<td></td>
+						<td><a
+							href="https://support.quest.com/contact-us/licensing">https://support.quest.com/contact-us/licensing</a>
+						</td>
+					</tr>
+					<tr>
+						<td>Support Renewals
+						</th>
+						<td>800-306-9329</td>
+						<td></td>
+						<td><a href="https://support.quest.dell.com/contact-us/renewals">https://support.quest.dell.com/contact-us/renewals</a>
+						</td>
+					</tr>
+					<tr>
+						<td>Accounting
+						</th>
+						<td>800-306-9329</td>
+						<td><a href="mailto:AP.DSG.Inquiry@software.dell.com">AP.DSG.Inquiry@software.dell.com</a></td>
+						<td>
 						</td>
 					</tr>
 					</tbody>
@@ -110,7 +113,8 @@
 <div>
 	<footer>
 
-		<p style="text-align:center; line-height:30px; font-size:12px; margin:0 auto">©2013 Dell Inc. ALL RIGHTS RESERVED.</p>
+		<p style="text-align:center; line-height:30px; font-size:12px; margin:0 auto">©2016 Quest Software Inc. ALL RIGHTS
+			RESERVED.</p>
 
 	</footer>
 </div>
