--- a/pages/leave-behind/remote-scan.com.html
+++ b/pages/leave-behind/remote-scan.com.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta charset="utf-8">
 
-	<title>vKernel is Now Quest Software!</title>
+	<title>Remotescan is Now Quest Software!</title>
 
 	<style type="text/css">
 		* {
@@ -119,6 +119,41 @@
 		.logo {
 			margin-left: 40px;
 		}
+
+		ul li {
+			position: relative;
+		}
+
+		li ul {
+			position: absolute;
+			left: 218px;
+			top: 0;
+			display: none;
+			width: 100%;
+			background-color: #6C6C6C;
+		}
+
+		ul li a {
+			display: block;
+		}
+
+		li:hover ul {
+			display: block;
+		}
+
+		ul li ul :hover li {
+			background-color: #fc4f15;
+			color: #fff;
+		}
+
+		.menu li ul:hover a {
+			color: #fff;
+		}
+
+		.menu li ul li a {
+			padding-left: 10px;
+		}
+
 	</style>
 
 	<!--[if IE 9]>
@@ -128,24 +163,6 @@
 		}
 	</style>
 	<![endif]-->
-
-	<script>
-		(function (i, s, o, g, r, a, m) {
-			i['GoogleAnalyticsObject'] = r;
-			i[r] = i[r] || function () {
-					(i[r].q = i[r].q || []).push(arguments)
-				}, i[r].l = 1 * new Date();
-			a = s.createElement(o),
-				m = s.getElementsByTagName(o)[0];
-			a.async = 1;
-			a.src = g;
-			m.parentNode.insertBefore(a, m)
-		})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-		ga('create', 'UA-2162256-1', 'vkernel.com');
-		ga('require', 'displayfeatures');
-		ga('send', 'pageview');
-	</script>
 </head>
 <body>
 
@@ -159,44 +176,157 @@
 				<div class="menu">
 					<ul>
 						<li>
-							<a href="https://quest.com/acquisitions/">Products</a>
+							<a href="https://quest.com/remotescan/">Products & Solutions</a>
 						</li>
 						<li>
-							<a href="https://quest.com/products/foglight-application-performance-monitoring/">Solutions</a>
+							<a
+								href="https://shop.quest.com/682/catalog/category.59118/language.en/currency.USD/?id=aiBTgjJcYR">Buy</a>
 						</li>
 						<li>
-							<a href="http://quest.com/partners/">Partners</a>
+							<a href="#">Trials</a>
+							<ul class="sub">
+								<li>
+									<a href="https://quest.com/register/55798">RemoteScan Enterprise</a>
+								</li>
+								<li>
+									<a href="https://quest.com/register/80740">RemoteScan Enterprise User Edition</a>
+								</li>
+								<li>
+									<a href="https://quest.com/register/55799">RemoteScan Universal</a>
+								</li>
+								<li>
+									<a href="https://quest.com/register/80741">RemoteScan Universal User Edition</a>
+								</li>
+							</ul>
 						</li>
 						<li>
-							<a href="https://support.quest.com/a-z-product-select#F">Support</a>
+							<a href="http://quest.com/remotescan/support.aspx">Support</a>
 						</li>
 						<li>
-							<a href="https://quest.com/acquisitions/vkernel.aspx">About vKernel</a></li>
+							<a href="https://www.remote-scan.com/customer/index.php">Customer Login</a>
+						</li>
 						<li>
-							<a href="http://quest.com/company/contact-us.aspx">Contact</a>
+							<a href="http://en.community.dell.com/techcenter/virtualization/remotescan/f">Communities</a>
+						</li>
+						<li>
+							<a href="http://www.remote-scan.com/customer/contact.php">Contact</a>
 						</li>
 					</ul>
 				</div>
 				<div class="content">
-					<h2>vKernel.com has moved to Quest.com</h2>
+					<h1>Remotescan has moved to Quest.com</h1>
 					<article>
-						<p>You'll find all the information you need about vKernel products as well as the breadth of Quest Software's other IT management offerings. Visit us at this
-							web address to see the latest developments in our growing portfolio of enterprise-quality products, solutions and support services.</p>
+						<p>RemoteScan, the software product that enables you to connect document scanners and cameras to hosted
+							applications that are running in Microsoft Hyper-V, Citrix, and VMware servers, has moved to <a
+								style="text-decoration: underline" href="http://quest.com/remotescan">quest.com/remotescan</a></p>
 
-						<p><strong>Learn how we became part of Quest Software and how to find the product and support information you need at <a
-							href="http://quest.com/acquisitions/">http://quest.com/acquisitions/</a></strong>
-						</p>
+						<p class="cta">RemoteScan became a part of Quest Software in 2012 and remains the same scanner connectivity
+							product that organizations have relied on since 2003. Visit us at <a href="http://quest.com/remotescan"
+							                                                                     style="text-decoration: underline">our
+								new web address</a> and access trial downloads, search our technical documentation, purchase RemoteScan,
+							and learn about our licensing options.</p>
 					</article>
-				</div>
 			</div>
 		</div>
-		<div class="footer">
-			<p>&copy;2016 Quest Software Inc. ALL RIGHTS RESERVED. | <a href="https://quest.com/legal/">Terms
-				of Use</a> | <a href="https://quest.com/legal/privacy.aspx">Privacy</a>
-			</p>
-		</div>
+			<div class="footer">
+				<p>&copy;2016 Quest Software Inc. ALL RIGHTS RESERVED. | <a href="https://quest.com/legal/">Terms
+					of Use</a> | <a href="https://quest.com/legal/privacy.aspx">Privacy</a>
+				</p>
+			</div>
 	</div>
 </div>
 
 </body>
 </html>
+
+
+<!-- begin olark code -->
+
+<script data-cfasync="false" type="text/javascript">/*<![CDATA[*/
+window.olark || (function (c) {
+	var f = window, d = document, l = f.location.protocol == "https:" ? "https:" : "http:", z = c.name, r = "load";
+	var nt = function () {
+		f[z] = function () {
+			(a.s = a.s || []).push(arguments)
+		};
+		var a = f[z]._ = {}, q = c.methods.length;
+		while (q--) {
+			(function (n) {
+				f[z][n] = function () {
+					f[z]("call", n, arguments)
+				}
+			})(c.methods[q])
+		}
+		a.l = c.loader;
+		a.i = nt;
+		a.p = {
+			0: +new Date
+		};
+		a.P = function (u) {
+			a.p[u] = new Date - a.p[0]
+		};
+		function s() {
+			a.P(r);
+			f[z](r)
+		}
+
+		f.addEventListener ? f.addEventListener(r, s, false) : f.attachEvent("on" + r, s);
+		var ld = function () {
+			function p(hd) {
+				hd = "head";
+				return ["<", hd, "></", hd, "><", i, ' onl' + 'oad="var d=', g, ";d.getElementsByTagName('head')[0].", j, "(d.", h, "('script')).", k, "='", l, "//", a.l, "'", '"', "></", i, ">"].join("")
+			}
+
+			var i = "body", m = d[i];
+			if (!m) {
+				return setTimeout(ld, 100)
+			}
+			a.P(1);
+			var j = "appendChild", h = "createElement", k = "src", n = d[h]("div"), v = n[j](d[h](z)), b = d[h]("iframe"), g = "document", e = "domain", o;
+			n.style.display = "none";
+			m.insertBefore(n, m.firstChild).id = z;
+			b.frameBorder = "0";
+			b.id = z + "-loader";
+			if (/MSIE[ ]+6/.test(navigator.userAgent)) {
+				b.src = "javascript:false"
+			}
+			b.allowTransparency = "true";
+			v[j](b);
+			try {
+				b.contentWindow[g].open()
+			}
+			catch (w) {
+				c[e] = d[e];
+				o = "javascript:var d=" + g + ".open();d.domain='" + d.domain + "';";
+				b[k] = o + "void(0);"
+			}
+			try {
+				var t = b.contentWindow[g];
+				t.write(p());
+				t.close()
+			}
+			catch (x) {
+				b[k] = o + 'd.write("' + p().replace(/"/g, String.fromCharCode(92) + '"') + '");d.close();'
+			}
+			a.P(2)
+		};
+		ld()
+	};
+	nt()
+})({
+	loader: "static.olark.com/jsclient/loader0.js", name: "olark", methods: ["configure", "extend", "declare", "identify"]
+});
+/* custom configuration goes here (www.olark.com/documentation) */
+olark.identify('6267-708-10-7082');
+/*]]>*/</script>
+<noscript><a href="https://www.olark.com/site/6267-708-10-7082/contact" title="Contact us" target="_blank">Questions? Feedback?</a> powered by <a
+	href="http://www.olark.com?welcome" title="Olark live chat software">Olark live chat software</a></noscript>
+
+<!-- end olark code -->
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+	_uacct = "UA-1247950-1";
+	urchinTracker();
+</script>
