--- a/pages/leave-behind/appassure.com.html
+++ b/pages/leave-behind/appassure.com.html
@@ -4,8 +4,25 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta charset="utf-8">
 
-	<title>vKernel is Now Quest Software!</title>
+	<title>AppAssure is Now Quest Software!</title>
+	<script>
+		(function (i, s, o, g, r, a, m) {
+			i['GoogleAnalyticsObject'] = r;
+			i[r] = i[r] || function () {
+					(i[r].q = i[r].q || []).push(arguments)
+				}, i[r].l = 1 * new Date();
+			a = s.createElement(o),
+				m = s.getElementsByTagName(o)[0];
+			a.async = 1;
+			a.src = g;
+			m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
+		ga('create', 'UA-1666820-1', 'appassure.com');
+		ga('require', 'displayfeatures');
+		ga('send', 'pageview');
+
+	</script>
 	<style type="text/css">
 		* {
 			box-sizing: border-box;
@@ -128,24 +145,6 @@
 		}
 	</style>
 	<![endif]-->
-
-	<script>
-		(function (i, s, o, g, r, a, m) {
-			i['GoogleAnalyticsObject'] = r;
-			i[r] = i[r] || function () {
-					(i[r].q = i[r].q || []).push(arguments)
-				}, i[r].l = 1 * new Date();
-			a = s.createElement(o),
-				m = s.getElementsByTagName(o)[0];
-			a.async = 1;
-			a.src = g;
-			m.parentNode.insertBefore(a, m)
-		})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-		ga('create', 'UA-2162256-1', 'vkernel.com');
-		ga('require', 'displayfeatures');
-		ga('send', 'pageview');
-	</script>
 </head>
 <body>
 
@@ -159,32 +158,42 @@
 				<div class="menu">
 					<ul>
 						<li>
-							<a href="https://quest.com/acquisitions/">Products</a>
+							<a href="https://quest.com/products/rapid-recovery/">Products</a>
 						</li>
 						<li>
-							<a href="https://quest.com/products/foglight-application-performance-monitoring/">Solutions</a>
+							<a href="http://quest.com/solutions/data-protection/">Solutions</a>
 						</li>
 						<li>
-							<a href="http://quest.com/partners/">Partners</a>
+							<a href="https://quest.com/partners/">Partners</a>
 						</li>
 						<li>
-							<a href="https://support.quest.com/a-z-product-select#F">Support</a>
+							<a href="https://support.quest.com/rapid-recovery/6.0.2">Support</a>
 						</li>
 						<li>
-							<a href="https://quest.com/acquisitions/vkernel.aspx">About vKernel</a></li>
+							<a href="http://quest.com/acquisitions/appassure.aspx">About AppAssure</a></li>
 						<li>
-							<a href="http://quest.com/company/contact-us.aspx">Contact</a>
+							<a href="https://quest.com/company/contact-us.aspx">Contact</a>
 						</li>
 					</ul>
 				</div>
 				<div class="content">
-					<h2>vKernel.com has moved to Quest.com</h2>
+					<h1>AppAssure is now Rapid Recovery!</h1>
 					<article>
-						<p>You'll find all the information you need about vKernel products as well as the breadth of Quest Software's other IT management offerings. Visit us at this
-							web address to see the latest developments in our growing portfolio of enterprise-quality products, solutions and support services.</p>
-
-						<p><strong>Learn how we became part of Quest Software and how to find the product and support information you need at <a
-							href="http://quest.com/acquisitions/">http://quest.com/acquisitions/</a></strong>
+						<p>There's a new release of AppAssure backup, replication and recovery software - renamed Data Protection
+							| Rapid Recovery, with expanded capabilities. With Rapid Recovery, you can:</p>
+						<ul>
+							<li>Ensure zero impact on your users by presenting them with the data they request instantly,
+								during restores, as if the outage never happened
+							</li>
+							<li>Assure system, application and data availability everywhere: physical, virtual and cloud</li>
+							<li>Protect growing virtual environments automatically</li>
+							<li>Connect to all the leading public clouds simply and easily</li>
+							<li>Lower costs – all capabilities included in one solution</li>
+						</ul>
+						<p><strong>And, it’s a free and easy upgrade for existing AppAssure 5.4.3 license holders!</strong></p>
+						<p><a href="https://quest.com/products/rapid-recovery/" style="text-decoration: underline;">Learn
+							more</a> – download a Rapid Recovery
+							<a href="https://quest.com/register/94236/" style="text-decoration: underline;">trial today</a>.
 						</p>
 					</article>
 				</div>
