--- a/pages/leave-behind/kace.com.html
+++ b/pages/leave-behind/kace.com.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta charset="utf-8">
 
-	<title>vKernel is Now Quest Software!</title>
+	<title>KACE is Now Quest Software!</title>
 
 	<style type="text/css">
 		* {
@@ -128,24 +128,6 @@
 		}
 	</style>
 	<![endif]-->
-
-	<script>
-		(function (i, s, o, g, r, a, m) {
-			i['GoogleAnalyticsObject'] = r;
-			i[r] = i[r] || function () {
-					(i[r].q = i[r].q || []).push(arguments)
-				}, i[r].l = 1 * new Date();
-			a = s.createElement(o),
-				m = s.getElementsByTagName(o)[0];
-			a.async = 1;
-			a.src = g;
-			m.parentNode.insertBefore(a, m)
-		})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-		ga('create', 'UA-2162256-1', 'vkernel.com');
-		ga('require', 'displayfeatures');
-		ga('send', 'pageview');
-	</script>
 </head>
 <body>
 
@@ -159,33 +141,35 @@
 				<div class="menu">
 					<ul>
 						<li>
-							<a href="https://quest.com/acquisitions/">Products</a>
+							<a href="https://quest.com/kace/">Products</a>
 						</li>
 						<li>
-							<a href="https://quest.com/products/foglight-application-performance-monitoring/">Solutions</a>
+							<a href="https://quest.com/solutions/endpoint-systems-management/">Solutions</a>
 						</li>
 						<li>
-							<a href="http://quest.com/partners/">Partners</a>
+							<a href="https://quest.com/partners/">Partners</a>
 						</li>
 						<li>
-							<a href="https://support.quest.com/a-z-product-select#F">Support</a>
+							<a href="https://support.quest.com/productline/kace">Support</a>
 						</li>
 						<li>
-							<a href="https://quest.com/acquisitions/vkernel.aspx">About vKernel</a></li>
+							<a href="https://support.quest.com/acquisitions/">About KACE</a></li>
 						<li>
-							<a href="http://quest.com/company/contact-us.aspx">Contact</a>
+							<a href="https://quest.com/company/contact-us.aspx">Contact</a>
 						</li>
 					</ul>
 				</div>
 				<div class="content">
-					<h2>vKernel.com has moved to Quest.com</h2>
+					<h1>KACE.com has moved to Quest.com.</h1>
 					<article>
-						<p>You'll find all the information you need about vKernel products as well as the breadth of Quest Software's other IT management offerings. Visit us at this
-							web address to see the latest developments in our growing portfolio of enterprise-quality products, solutions and support services.</p>
+						<p>You'll find all the information you need about KACE products as well as the breadth of Quest Software's
+							other IT management offerings.
+							Visit us at this web address to see the latest developments in our growing portfolio of enterprise-quality
+							products, solutions and
+							support services. Learn how we became part of Quest Software and how to find the product and support
+							information you need at
+							<a href="https://quest.com/kace/">https://quest.com/kace/</a>.</p>
 
-						<p><strong>Learn how we became part of Quest Software and how to find the product and support information you need at <a
-							href="http://quest.com/acquisitions/">http://quest.com/acquisitions/</a></strong>
-						</p>
 					</article>
 				</div>
 			</div>
