--- a/pages/leave-behind/remote-scan.com.html
+++ b/pages/leave-behind/remote-scan.com.html
@@ -6,12 +6,12 @@
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta charset="utf-8">
-	<title>AppAssure is now Rapid Recovery!</title><!--Meta Tags-->
+	<title>Remote-Scan.com is Now Quest.com</title><!--Meta Tags-->
 	<meta name="keywords" content="">
 	<meta name="description" content="">
-	<meta content="AppAssure" property="og:title">
-	<meta content="http://software.dell.com/images/logos/dell.jpg" property="og:image">
-	<meta content="http://software.dell.com/appassure-has-moved/" property="og:url">
+	<meta content="remote-Scan" property="og:title">
+	<meta content="https://software.dell.com/images/logos/dell.jpg" property="og:image">
+	<meta content="https://software.dell.com/remote-Scan-has-moved/" property="og:url">
 	<meta content="" property="og:description">
 	<meta name="BU" content="">
 	<meta name="Solution" content="">
@@ -21,55 +21,38 @@
 	<meta name="Platform" content="">
 	<meta name="Brand" content="">
 	<meta name="PageTemplate" content="Crawled Landing Page">
-	<meta name="Section" content="appassure-has-moved">
+	<meta name="Section" content="remote-Scan-has-moved">
 	<meta name="Subsection" content="">
 	<script type="text/javascript" src="//code.jquery.com/jquery-1.9.1.min.js"></script>
-	<link rel="alternate" hreflang="en" href="http://www.appassure.com/" />
-	<link rel="canonical" href="http://www.appassure.com/" /><!-- V1LayoutHeadTagCommon (DSG US) -->
-	<link rel="stylesheet" type="text/css" href="http://software.dell.com/Static/Styles/collective.min.css?38">
-	<link rel="stylesheet" type="text/css" href="http://software.dell.com/Static/Styles/widgets-dsg.css">
-	<link rel="stylesheet" type="text/css" href="http://software.dell.com/Static/Styles/print.min.css" media="print">
-	<script type="text/javascript" src="http://software.dell.com/Static/Scripts/jquery.plugins.min.js"></script>
+	<link rel="alternate" hreflang="en" href="http://www.remote-Scan.com/"/>
+	<link rel="canonical" href="http://www.remote-Scan.com/"/><!-- V1LayoutHeadTagCommon (DSG US) -->
+	<link rel="stylesheet" type="text/css" href="https://software.dell.com/Static/Styles/collective.min.css?38">
+	<link rel="stylesheet" type="text/css" href="https://software.dell.com/Static/Styles/widgets-dsg.css">
+	<link rel="stylesheet" type="text/css" href="https://software.dell.com/Static/Styles/print.min.css" media="print">
+	<script type="text/javascript" src="https://software.dell.com/Static/Scripts/jquery.plugins.min.js"></script>
 	<!--[if lt IE 9]>
-	<script type="text/javascript" src="http://software.dell.com/Static/Scripts/html5shiv.js"></script>
+	<script type="text/javascript" src="https://software.dell.com/Static/Scripts/html5shiv.js"></script>
 	<![endif]--><!--[if IE 7]>
-	<link rel="stylesheet" type="text/css" href="http://software.dell.com/Static/Styles/ie7.min.css">
-	<script type="text/javascript" src="http://software.dell.com/Static/Scripts/ie.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="https://software.dell.com/Static/Styles/ie7.min.css">
+	<script type="text/javascript" src="https://software.dell.com/Static/Scripts/ie.min.js"></script>
 	<![endif]--><!--[if IE 8]>
-	<link rel="stylesheet" type="text/css" href="http://software.dell.com/Static/Styles/ie8.min.css">
-	<script type="text/javascript" src="http://software.dell.com/Static/Scripts/ie.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="https://software.dell.com/Static/Styles/ie8.min.css">
+	<script type="text/javascript" src="https://software.dell.com/Static/Scripts/ie.min.js"></script>
 	<![endif]--><!--[if IE 9]>
-	<link rel="stylesheet" type="text/css" href="http://software.dell.com/Static/Styles/ie9.min.css"><![endif]-->
-	<link href="http://software.dell.com/Static/Styles/bootstrap-dsg.min.css?v1" type="text/css" rel="stylesheet">
-	<script src="http://software.dell.com/static/library/jQueryUI/jquery-ui-1.11.4.min.js"></script>
-	<script src="http://software.dell.com/static/Library/bootstrap-3.3.4.min.js"></script>
-	<script src="http://software.dell.com/static/Library/modernizr.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="https://software.dell.com/Static/Styles/ie9.min.css"><![endif]-->
+	<link href="https://software.dell.com/Static/Styles/bootstrap-dsg.min.css?v1" type="text/css" rel="stylesheet">
+	<script src="https://software.dell.com/static/library/jQueryUI/jquery-ui-1.11.4.min.js"></script>
+	<script src="https://software.dell.com/static/Library/bootstrap-3.3.4.min.js"></script>
+	<script src="https://software.dell.com/static/Library/modernizr.min.js"></script>
 	<!--[if IE]>
-	<link rel="stylesheet" href="http://software.dell.com/Static/Styles/bootstrap-dsg-ie.css"><![endif]-->
+	<link rel="stylesheet" href="https://software.dell.com/Static/Styles/bootstrap-dsg-ie.css"><![endif]-->
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries --><!--[if lt IE 9]>
 	<script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 	<script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
 	<script src="http://code.jquery.com/jquery-1.10.2.js"></script>
 	<script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
-	<script>
-		(function (i, s, o, g, r, a, m) {
-			i['GoogleAnalyticsObject'] = r;
-			i[r] = i[r] || function () {
-					(i[r].q = i[r].q || []).push(arguments)
-				}, i[r].l = 1 * new Date();
-			a = s.createElement(o),
-				m = s.getElementsByTagName(o)[0];
-			a.async = 1;
-			a.src = g;
-			m.parentNode.insertBefore(a, m)
-		})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-		ga('create', 'UA-1666820-1', 'appassure.com');
-		ga('require', 'displayfeatures');
-		ga('send', 'pageview');
-
-	</script>
 	<style type="text/css">
 		body {
 			background-color: rgb(238, 238, 238);
@@ -223,7 +206,7 @@
 
 		.ui-widget-header {
 			border: 1px solid #aaaaaa;
-			background: #eeeeee url("http://software.dell.com/landing//images/ui-bg_flat_100_eeeeee_40x100.png") 50% 50% repeat-x;
+			background: #eeeeee url("https://software.dell.com/landing//images/ui-bg_flat_100_eeeeee_40x100.png") 50% 50% repeat-x;
 			color: #FFFFFF;
 			font-weight: bold;
 		}
@@ -238,7 +221,7 @@
 		.ui-widget-content .ui-state-default,
 		.ui-widget-header .ui-state-default {
 			border: 1px solid #aaaaaa;
-			background: #6ea204 url("http://software.dell.com/landing//images/ui-bg_flat_100_6ea204_40x100.png") 50% 50% repeat-x;
+			background: #6ea204 url("https://software.dell.com/landing//images/ui-bg_flat_100_6ea204_40x100.png") 50% 50% repeat-x;
 			font-weight: bold;
 			color: #ffffff;
 		}
@@ -382,7 +365,7 @@
 
 		/* Overlays */
 		.ui-widget-overlay {
-			background: #aaaaaa url("http://software.dell.com/landing//images/ui-bg_flat_0_aaaaaa_40x100.png") 50% 50% repeat-x;
+			background: #aaaaaa url("https://software.dell.com/landing//images/ui-bg_flat_0_aaaaaa_40x100.png") 50% 50% repeat-x;
 			opacity: .3;
 			filter: Alpha(Opacity=30);
 		}
@@ -390,7 +373,7 @@
 		.ui-widget-shadow {
 			margin: -8px 0 0 -8px;
 			padding: 8px;
-			background: #aaaaaa url("http://software.dell.com/landing//images/ui-bg_flat_0_aaaaaa_40x100.png") 50% 50% repeat-x;
+			background: #aaaaaa url("https://software.dell.com/landing//images/ui-bg_flat_0_aaaaaa_40x100.png") 50% 50% repeat-x;
 			opacity: .3;
 			filter: Alpha(Opacity=30);
 			border-radius: 8px;
@@ -439,7 +422,7 @@
 			width: 116px;
 			height: 191px;
 			right: 0px;
-			background-image: url("http://software.dell.com/landing/images/bg_lock.png");
+			background-image: url("https://software.dell.com/landing/images/bg_lock.png");
 			background-attachment: scroll;
 			backgroun-repeat: no-repeat;
 			background-postion-x: 0%;
@@ -456,7 +439,7 @@
 			width: 315px;
 			height: 135px;
 			right: 11%;
-			background-image: url("http://software.dell.com/landing/images/bg_cloud.png");
+			background-image: url("https://software.dell.com/landing/images/bg_cloud.png");
 			background-attachment: scroll;
 			backgroun-repeat: no-repeat;
 			background-postion-x: 0%;
@@ -473,7 +456,7 @@
 			width: 140px;
 			height: 86px;
 			right: 53%;
-			background-image: url("http://software.dell.com/landing/images/bg_scheme.png");
+			background-image: url("https://software.dell.com/landing/images/bg_scheme.png");
 			background-attachment: scroll;
 			backgroun-repeat: no-repeat;
 			background-postion-x: 0%;
@@ -538,74 +521,176 @@
 		}
 	</style>
 </head>
-<body class="one">
-<div id="wrapper">
-	<div id="main-content">
-		<div id="main-content">
-			<div class="wrapper" style="margin-top: 100px;">
-				<div class="round-corners">
-					<div class="bg_quest bg"></div>
-					<div class="menu">
-						<ul aria-activedescendant="ui-id-6" class="ui-menu ui-widget ui-widget-content ui-corner-all"
-						    id="menu" role="menu" tabindex="0">
-							<li class="ui-menu-item" role="presentation">
-								<a aria-haspopup="true" class="ui-corner-all" href="https://quest.com/products/rapid-recovery/"
-								   id="ui-id-1" role="menuitem" tabindex="-1">Products</a>
-							</li>
-							<li class="ui-menu-item" role="presentation">
-								<a class="ui-corner-all" href="http://quest.com/solutions/data-protection/"
-								   id="ui-id-2" role="menuitem" tabindex="-1">Solutions</a>
-							</li>
-							<li class="ui-menu-item" role="presentation">
-								<a class="ui-corner-all" href="http://quest.com/partners/" id="ui-id-3" role="menuitem" tabindex="-1">Partners</a>
-							</li>
-							<li class="ui-menu-item" role="presentation">
-								<a class="ui-corner-all" href="https://support.quest.com/rapid-recovery/6.0.2" id="ui-id-4"
-								   role="menuitem" tabindex="-1">Support</a>
-							</li>
-							<li class="ui-menu-item" role="presentation">
-								<a class="ui-corner-all" href="http://quest.com/acquisitions/appassure.aspx" id="ui-id-5"
-								   role="menuitem" tabindex="-1">About
-									AppAssure</a></li>
-							<li class="ui-menu-item" role="presentation">
-								<a class="ui-corner-all" href="http://quest.com/company/contact-us.aspx" id="ui-id-6" role="menuitem"
-								   tabindex="-1">Contact</a>
-							</li>
-						</ul>
-						<script type="text/javascript">
-							$("#menu").menu();
-						</script>
-					</div>
-					<div id="body-container">
-						<h2>AppAssure is now Rapid Recovery!</h2>
-						<article>
-							<p>There's a new release of AppAssure backup, replication and recovery software - renamed Data Protection
-								| Rapid Recovery, with expanded capabilities. With Rapid Recovery, you can:</p>
-							<ul>
-								<li>Ensure zero impact on your users by presenting them with the data they request instantly,
-									during restores, as if the outage never happened
-								</li>
-								<li>Assure system, application and data availability everywhere: physical, virtual and cloud</li>
-								<li>Protect growing virtual environments automatically</li>
-								<li>Connect to all the leading public clouds simply and easily</li>
-								<li>Lower costs – all capabilities included in one solution</li>
-							</ul>
-							<p><strong>And, it’s a free and easy upgrade for existing AppAssure 5.4.3 license holders!</strong></p>
+<body class=" onehome page page-id-21323 page-template page-template-page-redirect-php">
+<div id="main-content">
+	<div class="wrapper" style="margin-top: 100px;">
+		<div class="round-corners">
+			<div class="bg_quest bg"></div>
+			<div class="menu">
+				<ul aria-activedescendant="ui-id-6" class="ui-menu ui-widget ui-widget-content ui-corner-all" id="menu" role="menu" tabindex="0">
 
-							<p><a href="http://software.dell.com/products/rapid-recovery/" style="text-decoration: underline;">Learn
-								more</a> – download a Rapid Recovery
-								<a href="https://software.dell.com/register/94236/" style="text-decoration: underline;">trial today</a>.
-							</p>
-						</article>
-					</div>
-				</div>
-				<div class="round-corners" id="footer">
-					<p>&copy;2016 Quest Software Inc. ALL RIGHTS RESERVED. | <a href="http://quest.com/legal/">Terms
-						of Use</a> | <a href="http://quest.com/legal/privacy.aspx">Privacy</a>
-					</p></div>
+					<li>
+						<a href="https://software.dell.com/remotescan/">Products & Solutions</a>
+					</li>
+					<li>
+						<a href="https://shop.software.dell.com/682/purl-remotescan">Buy</a>
+					</li>
+					<li class="ui-menu-item" role="presentation">
+						<a aria-haspopup="true" class="ui-corner-all" href="#" id="ui-id-1" role="menuitem" tabindex="-1">Trials</a>
+						<ul aria-expanded="false" aria-hidden="true" class="ui-menu ui-widget ui-widget-content ui-corner-all" role="menu"
+						    style="left: 147px; width: 325px; display: none; z-index: 1100;">
+							<li class="ui-menu-item" role="presentation"><a class="ui-corner-all"
+							                                                href="https://quest.com/register/55798" id="ui-id-7"
+							                                                role="menuitem"
+							                                                tabindex="-1">RemoteScan Enterprise</a></li>
+							<li class="ui-menu-item" role="presentation"><a class="ui-corner-all"
+							                                                href="https://quest.com/register/80740" id="ui-id-8"
+							                                                role="menuitem"
+							                                                tabindex="-1">RemoteScan Enterprise User Edition</a></li>
+							<li class="ui-menu-item" role="presentation"><a class="ui-corner-all"
+							                                                href="https://quest.com/register/55799" id="ui-id-9"
+							                                                role="menuitem"
+							                                                tabindex="-1">RemoteScan Universal</a></li>
+							<li class="ui-menu-item" role="presentation"><a class="ui-corner-all"
+							                                                href="https://quest.com/register/80741" id="ui-id-10"
+							                                                role="menuitem"
+							                                                tabindex="-1">RemoteScan Universal User Edition</a></li>
+						</ul>
+
+
+					</li>
+					<li>
+						<a href="http://quest.com/remotescan/support.aspx">Support</a>
+					</li>
+					<li>
+						<a href="https://www.remote-scan.com/customer/index.php">Customer Login</a>
+					</li>
+					<li>
+						<a href="http://en.community.dell.com/techcenter/virtualization/remotescan/f">Communities</a>
+					</li>
+					<li>
+						<a href="http://www.remote-scan.com/customer/contact.php">Contact</a>
+					</li>
+				</ul>
+				<script type="text/javascript">
+					$("#menu").menu({position: {my: "left top", at: "right+6 top+5"}});
+					//$(document).ready(function(){$("#trial_submenu").css('left', '147px');});
+				</script>
+			</div>
+			<div id="body-container">
+				<h2>Remote-Scan is now Rapid Recovery!</h2>
+				<article>
+					<p>RemoteScan, the software product that enables you to connect document scanners and cameras to hosted
+						applications that are running in Microsoft Hyper-V, Citrix, and VMware servers, has moved to <a
+							style="text-decoration: underline" href="http://quest.com/remotescan">software.dell.com/remotescan</a></p>
+					<br>
+					<p class="cta">RemoteScan became a part of Dell Software in 2012 and remains the same scanner connectivity
+						product that organizations have relied on since 2003. Visit us at <a href="http://quest.com/remotescan"
+						                                                                     style="text-decoration: underline">our
+							new web address</a> and access trial downloads, search our technical documentation, purchase RemoteScan,
+						and learn about our licensing options.</p>
+				</article>
 			</div>
 		</div>
-			</div>
-		</div>
+		<div class="round-corners" id="footer">
+			<p>&copy;2016 Quest Software Inc. ALL RIGHTS RESERVED. | <a href="http://quest.com/legal/">Terms
+				of Use</a> | <a href="http://quest.com/legal/privacy.aspx">Privacy</a>
+			</p></div>
+	</div>
+</div>
+</div>
+</div>
+
+<!-- begin olark code -->
+
+<script data-cfasync="false" type="text/javascript">/*<![CDATA[*/
+window.olark || (function (c) {
+	var f = window, d = document, l = f.location.protocol == "https:" ? "https:" : "http:", z = c.name, r = "load";
+	var nt = function () {
+		f[z] = function () {
+			(a.s = a.s || []).push(arguments)
+		};
+		var a = f[z]._ = {}, q = c.methods.length;
+		while (q--) {
+			(function (n) {
+				f[z][n] = function () {
+					f[z]("call", n, arguments)
+				}
+			})(c.methods[q])
+		}
+		a.l = c.loader;
+		a.i = nt;
+		a.p = {
+			0: +new Date
+		};
+		a.P = function (u) {
+			a.p[u] = new Date - a.p[0]
+		};
+		function s() {
+			a.P(r);
+			f[z](r)
+		}
+
+		f.addEventListener ? f.addEventListener(r, s, false) : f.attachEvent("on" + r, s);
+		var ld = function () {
+			function p(hd) {
+				hd = "head";
+				return ["<", hd, "></", hd, "><", i, ' onl' + 'oad="var d=', g, ";d.getElementsByTagName('head')[0].", j, "(d.", h, "('script')).", k, "='", l, "//", a.l, "'", '"', "></", i, ">"].join("")
+			}
+
+			var i = "body", m = d[i];
+			if (!m) {
+				return setTimeout(ld, 100)
+			}
+			a.P(1);
+			var j = "appendChild", h = "createElement", k = "src", n = d[h]("div"), v = n[j](d[h](z)), b = d[h]("iframe"), g = "document", e = "domain", o;
+			n.style.display = "none";
+			m.insertBefore(n, m.firstChild).id = z;
+			b.frameBorder = "0";
+			b.id = z + "-loader";
+			if (/MSIE[ ]+6/.test(navigator.userAgent)) {
+				b.src = "javascript:false"
+			}
+			b.allowTransparency = "true";
+			v[j](b);
+			try {
+				b.contentWindow[g].open()
+			}
+			catch (w) {
+				c[e] = d[e];
+				o = "javascript:var d=" + g + ".open();d.domain='" + d.domain + "';";
+				b[k] = o + "void(0);"
+			}
+			try {
+				var t = b.contentWindow[g];
+				t.write(p());
+				t.close()
+			}
+			catch (x) {
+				b[k] = o + 'd.write("' + p().replace(/"/g, String.fromCharCode(92) + '"') + '");d.close();'
+			}
+			a.P(2)
+		};
+		ld()
+	};
+	nt()
+})({
+	loader: "static.olark.com/jsclient/loader0.js", name: "olark", methods: ["configure", "extend", "declare", "identify"]
+});
+/* custom configuration goes here (www.olark.com/documentation) */
+olark.identify('6267-708-10-7082');
+/*]]>*/</script>
+<noscript><a href="https://www.olark.com/site/6267-708-10-7082/contact" title="Contact us" target="_blank">Questions? Feedback?</a> powered by <a
+	href="http://www.olark.com?welcome" title="Olark live chat software">Olark live chat software</a></noscript>
+
+<!-- end olark code -->
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+	_uacct = "UA-1247950-1";
+	urchinTracker();
+</script>
 </body>
 </html>
+
